# lights_recognition

./: Makefile  README.md  pyproject.toml  test_1.webm
app/ML_base/: base.py
app/ML_learner/: __init__.py  learner_obj.py  learner_obj_base.py
app/ML_learner/graphs/: __init__.py  graph.py
app/ML_learner/learn_logs/: learn_logs.json  test_learn_logs.json
app/ML_module/: __init__.py  obj.py
app/ML_tests/: test.py  videos_to_json.py
app/ML_tests/videos/: test_2.webm  test_3.webm  test_4.webm
app/api/: __init__.py  app.py  views.py
app/api/api_manage/: funcs.py
app/api/schemas/: schemas.py
app/api/templates/: base.html  video_sourse.html
app/authomatic_upload/: __init__.py  funcs_uploaders.py  uploader.py
app/best_model_state_container/: __init__.py  obj.py
app/clear_dirs/: __init__.py  funcs.py  scripts.py
app/config/: config.ini  config.py
app/database/: base.py
app/dataloaders/: obj.py
app/db_operations/: operations.py
app/files_navigation/: __init__.py  funcs.py
app/manage/: __init__.py  demo_video_descriptions.py  execute_frame.py  get_demo_video.py
app/manage/manage/: demo_video_descriptions.py  read_video.py  (+1 more)
app/models/: __init__.py  video_models.py
app/random_state/: __init__.py  decorator.py
app/sample_operations/: funcs.py
scripts/: clear_images_sample.py  clear_pycache_files.py  clear_tests_outputs.py  kill_port.py  model_learn.py  model_learn_continue.py  move_model_state_file.py  recreate_db.py  save_demo_videos_to_json.py  test_actual_model.py  test_model_learn.py  test_model_learn_continue.py  unpack_archives.py
(+7 files in other folders)
