[tool.poetry]
name = "lr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
tqdm = "^4.67.1"
scikit-learn = "^1.5.2"
uvicorn = "^0.32.1"
fastapy = "^1.0.5"
fastapi = "^0.115.5"
SQLAlchemy = "^2.0.36"
opencv-python = "^4.10.0"
ipython = "^8.30.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
albumentations = "^1.4.24"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
